# transcription-tools

./: .gitignore  IMPROVEMENT-PLAN.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: generate_workflows.py
src/transcription_tools/: __init__.py  audio.py  cleanup.py  cli.py  config.py  install_paths.py  meta_cli.py  text_processing.py  transcribe.py  user_config.py
tests/: test_audio.py  test_audio_integration.py  test_cleanup.py  test_cleanup_init.py  test_cli.py  test_config.py  test_generate_workflows.py  test_install_paths.py  test_meta_cli.py  test_text_processing.py  test_tier_availability.py  test_transcribe.py  test_user_config.py
workflows/Transcribe Audio - Fast.workflow/Contents/: Info.plist  document.wflow
workflows/Transcribe Audio - Medium.workflow/Contents/: Info.plist  document.wflow
workflows/Transcribe Audio - Slow.workflow/Contents/: Info.plist  document.wflow
workflows/Transcribe Audio - Very Fast.workflow/Contents/: Info.plist  document.wflow
workflows/Transcribe Audio - Very Slow.workflow/Contents/: Info.plist  document.wflow
