[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transcription-tools"
version = "2.0.1"
description = "macOS audio and video transcription with Finder integration"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "openai-whisper",
    "faster-whisper",
    "openai",
    "torch",
    "numpy<2; platform_machine == 'x86_64'",
    "numba<0.63; platform_machine == 'x86_64'",
]

[project.scripts]
transcription-tools = "transcription_tools.meta_cli:main"
transcribe-veryfast = "transcription_tools.cli:veryfast"
transcribe-fast = "transcription_tools.cli:fast"
transcribe-medium = "transcription_tools.cli:medium"
transcribe-slow = "transcription_tools.cli:slow"
transcribe-veryslow = "transcription_tools.cli:veryslow"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
markers = [
    "requires_ffmpeg: skip test if ffmpeg is not installed",
]
