[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transcription-tools"
version = "2.0.3"
description = "macOS audio and video transcription with Finder integration"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Austin Rojan" },
]
readme = "README.md"
keywords = ["transcription", "whisper", "macos", "audio", "speech-to-text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "openai-whisper",
    "faster-whisper",
    "openai",
    "torch",
    "numpy<2; platform_machine == 'x86_64'",
    "numba<0.63; platform_machine == 'x86_64'",
]

[project.scripts]
transcription-tools = "transcription_tools.meta_cli:main"
transcribe-veryfast = "transcription_tools.cli:veryfast"
transcribe-fast = "transcription_tools.cli:fast"
transcribe-medium = "transcription_tools.cli:medium"
transcribe-slow = "transcription_tools.cli:slow"
transcribe-veryslow = "transcription_tools.cli:veryslow"

[project.urls]
Homepage = "https://github.com/austinrojan/transcription-tools"
Repository = "https://github.com/austinrojan/transcription-tools"
Issues = "https://github.com/austinrojan/transcription-tools/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
markers = [
    "requires_ffmpeg: skip test if ffmpeg is not installed",
]
